<resources>
    <string name="app_name">Beraad</string>
    <string name="action_settings">Settings</string>
    <string name="populaire">Populaire</string>
    <string name="recent">Récent</string>
    <string name="nb_participants">12</string>
    <string name="titre_event">Le titre de l\'événement</string>
    <string name="avenir">À venir</string>
    <string name="joursRestants">Dans 3 jours</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Heure_event">19:05</string>
    <string name="date_event">21/12/2016</string>
    <string name="lieu_event">211 avenue Jean Jaurès, 75019 Paris</string>
    <string name="titre_description_event">Description</string>
    <string name="text_participation_button__event">J\'y serai !</string>
    <string name="description_event">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In egestas et metus a tempor. Suspendisse hendrerit facilisis nisi a consectetur. Etiam tempor feugiat magna, vitae dignissim massa viverra eget. Nunc laoreet magna vitae est venenatis egestas.</string>
    <string name="nom_event">Nom de l\'événement</string>
    <string name="auteur_event">par Adrien Lemaire</string>

    <string name="google_maps_api_key">AIzaSyBu3SDK9aCGEkxDS5yyX6jT81jpkRkxeKA</string>

    <string name="modifier_profil">Modifier</string>
    <string name="nom_prenom_profil">Nom Prenom</string>
    <string name="email_profil">adresse@email.com</string>


    <string name="pick_date">Pick Date</string>
    <string name="date_creer_event">Votre date</string>
    <string name="pick_time">Pick Time</string>
    <string name="creer_event">Créer</string>

    <string name="facebook_app_id">1116862081775065</string>

    <string name="title_activity_logout">LogoutActivity</string>
    <string name="deconnecter_compte">Se déconnecter</string>
    <string name="login_with_facebook">Se connecter avec Facebook</string>

</resources>
