<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/image_profil"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.32"
        app:srcCompat="@mipmap/ic_launcher"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/nomprenom_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nom_prenom_profil"
            android:textAlignment="textStart"
            android:textSize="36sp" />

        <Button
            android:text="@string/modifier_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="30dp" />
        <Button
            android:text="@string/deconnecter_compte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_log_out"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="30dp" />
    </LinearLayout>

</LinearLayout>