<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/spacer_sixteen_dp"
        android:showDividers="middle"
        android:id="@+id/ajout_event">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/nom_event"
            android:hint="Nom évènement"/>


        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"

            android:minLines="6"
            android:hint="description"/>

        <EditText
            android:id="@+id/nbPlaceMAX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Nombre place maximum"/>

        <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
            android:id="@+id/places_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            app:pacv_languageCode="fr"
            app:pacv_resultType="no_type"
            app:pacv_googleMapsApiKey="@string/google_maps_api_key"
            app:pacv_adapterClass="com.iut.beraad.beraad.AjoutEventAdapter"
            android:hint="Adresse"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_datePicker"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_weight="0.05"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date"
                app:srcCompat="@drawable/ic_date_add_event" />

            <TextView
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_creer_event"
                android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_timePicker"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:onClick="showTimePickerDialog"
                android:text="@string/pick_time"
                app:srcCompat="@drawable/ic_horloge_add_event" />

            <TextView
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="@string/date_creer_event"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <Button
            android:id="@+id/creerEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creer_event"
            style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>
</ScrollView>
